--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
 
+    <main>
+      <div class="container">
+          <div class="row">
+              <div class="col">
+                  
+              </div>
+          </div>
+      </div>
+    </main>
 
 
   
