--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>Nikel</title>
 </head>
+
 <body>
 
     <main>
-      <div class="container">
-          <div class="row">
-              <div class="col">
-                  
-              </div>
-          </div>
-      </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div>
+                        <p>
+                            Organize suas finânças de uma forma fácil.
+                        </p>
+                        <p>Controle seu dinheiro e investimentos.</p>
+                        <p>Economize e atinja seus objetivos.</p>
+
+                        <div>
+                            <img src="./assets/images/pocket.png" class="img-fluid"  alt="img-pocket">
+                            <img src="./assets/images/coins.png" class="img-fluid" alt="img-coins">
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col">
+
+                </div>
+            </div>
+        </div>
     </main>
 
 
-  
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
