--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,61 @@
 
                     </div>
                 </div>
-                <div class="col">
 
+                <div class="col">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div>
+                                    <img src="./assets/images/nikel-logo.png" class="img-fluid" alt="img-nikel-logo">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <form>
+                                    <div class="mb-3">
+                                      <label for="exampleInputEmail1" class="form-label">Email</label>
+                                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                      <div id="emailHelp" class="form-text">Utilize seu e-mail para realizar seu login.</div>
+                                    </div>
+                                    <div class="mb-3">
+                                      <label for="exampleInputPassword1" class="form-label">Senha</label>
+                                      <input type="password" class="form-control" id="exampleInputPassword1">
+                                    </div>
+                                    <div class="mb-3 form-check">
+                                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                      <label class="form-check-label" for="exampleCheck1">Permanecer Logado.</label>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Entrar</button>
+                                  </form>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <p>Ainda não tem conta? Criar uma conta.</p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <div>
+                                    <img src="./assets/images/codai-logo.png" alt="img-codai">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <div>
+                                    <img src="./assets/images/growdev-logo.png" alt="img-logo-growdev">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
