--- a/public/index.html
+++ b/public/index.html
@@ -11,32 +11,32 @@
     <title>Nikel</title>
 </head>
 
-<body>
+<body id="login">
 
     <main>
         <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div>
+            <div class="row vh-100">
+                <div class="col d-flex justify-content-center my-5 flex-column">
+                    <div class="text-login">
                         <p>
                             Organize suas finânças de uma forma fácil.
                         </p>
                         <p>Controle seu dinheiro e investimentos.</p>
                         <p>Economize e atinja seus objetivos.</p>
 
-                        <div>
+                        <div class="text-center">
                             <img src="./assets/images/pocket.png" class="img-fluid"  alt="img-pocket">
-                            <img src="./assets/images/coins.png" class="img-fluid" alt="img-coins">
+                            <img src="./assets/images/coins.png" class="img-fluid d-none d-md-inline coins" alt="img-coins">
                         </div>
 
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col  d-flex my-5  justify-content-center flex-column ">
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <div>
+                                <div class="text-center mb-3">
                                     <img src="./assets/images/nikel-logo.png" class="img-fluid" alt="img-nikel-logo">
                                 </div>
                             </div>
@@ -58,20 +58,23 @@
                                       <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                       <label class="form-check-label" for="exampleCheck1">Permanecer Logado.</label>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Entrar</button>
+                                    <button type="submit" class="btn button-login">Entrar</button>
                                   </form>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col">
-                                <p>Ainda não tem conta? Criar uma conta.</p>
+                                <p class="text-center mt-2 form-text">Ainda não tem conta? 
+                                    <span class="link-default">  Criar uma conta.</span>
+                                  
+                                </p>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col">
-                                <div>
+                                <div class="text-center mt-5">
                                     <img src="./assets/images/codai-logo.png" alt="img-codai">
                                 </div>
                             </div>
@@ -79,7 +82,7 @@
 
                         <div class="row">
                             <div class="col">
-                                <div>
+                                <div class="text-center">
                                     <img src="./assets/images/growdev-logo.png" alt="img-logo-growdev">
                                 </div>
                             </div>
