Add para de navegação

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div> <!--Fim da col 1-->
 
                 <div class="col  d-flex my-5  justify-content-center flex-column ">
                     <div class="container">
@@ -89,7 +89,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div> <!--Fim da col 2-->
             </div>
         </div>
     </main>
