--- a/public/home.html
+++ b/public/home.html
@@ -53,7 +53,23 @@
 
     <!-- Fim da barra de navegação -->
 
-    
+    <main>
+        <div class="container-lg">
+                <div class="row">
+                    <div class="col  d-flex mt-4 justify-content-start align-items-center ">
+                        <i class="bi bi-cash-coin color-primary icon-detail "></i>    
+                        <span class="fs-2" >R$ 0,00</span>                                    
+                    </div>
+
+
+                    <div class="col d-flex mt-4 justify-content-end">
+                        <div class="text-center">
+                            <img src="./assets/images/coins-small.png" alt="">
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </main>
 
 
 
