--- a/public/home.html
+++ b/public/home.html
@@ -68,6 +68,52 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-12 shadow-lg info ">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-6">
+                                   <span class="fs-4">Entradas <i class="bi bi-arrow-down-circle fs-2 align-middle"></i> </span>  
+                                </div>
+                                <div class="col-6">
+                                  <span class="fs-4">Saídas <i class="bi bi-arrow-up-circle fs-2"></i> </span>   
+                                </div>
+                                <div class="col-12 my-2">
+                                    <hr>
+                                </div>
+                            </div>
+
+
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col">
+                                                R$ 1200,00
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col">
+                                                R$ 500,00
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <button  type="button " class="btn button-default ">Ver Todas</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
         </div>
     </main>
 
