--- a/public/home.html
+++ b/public/home.html
@@ -107,12 +107,14 @@
                             </div>
 
                             <div class="col-12">
-                                <button  type="button " class="btn button-default ">Ver Todas</button>
+                                <button  type="button " class="btn button-default mt-2 ">Ver Todas</button>
                             </div>
 
                         </div>
                     </div>
                 </div>
+
+
 
         </div>
     </main>
