--- a/public/home.html
+++ b/public/home.html
@@ -30,7 +30,7 @@
                     <div class="d-flex">
                         <a href="home.html"><button class="btn" type="button"><i
                                     class="bi bi-house-fill fs-4 color-secondary"></i></button></a>
-                        <a href="home.html"><button class="btn" type="button"><i
+                        <a href="transactions.html"><button class="btn" type="button"><i
                                     class="bi bi-currency-exchange fs-4"></i></button></a>
 
                         <div class="dropdown">
