--- a/public/home.html
+++ b/public/home.html
@@ -49,74 +49,131 @@
                 </div>
             </div>
         </nav>
-    </header> 
+    </header>
 
     <!-- Fim da barra de navegação -->
 
     <main>
         <div class="container-lg">
-                <div class="row">
-                    <div class="col  d-flex mt-4 justify-content-start align-items-center ">
-                        <i class="bi bi-cash-coin color-primary icon-detail "></i>    
-                        <span class="fs-2" >R$ 0,00</span>                                    
-                    </div>
-
-
-                    <div class="col d-flex mt-4 justify-content-end">
-                        <div class="text-center">
-                            <img src="./assets/images/coins-small.png" alt="">
-                        </div>
-                    </div>
+            <div class="row">
+                <div class="col  d-flex mt-4 justify-content-start align-items-center ">
+                    <i class="bi bi-cash-coin color-primary icon-detail "></i>
+                    <span class="fs-2">R$ 0,00</span>
                 </div>
 
-                <div class="row">
-                    <div class="col-12 shadow-lg info ">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-6">
-                                   <span class="fs-4">Entradas <i class="bi bi-arrow-down-circle fs-2 align-middle"></i> </span>  
-                                </div>
-                                <div class="col-6">
-                                  <span class="fs-4">Saídas <i class="bi bi-arrow-up-circle fs-2"></i> </span>   
-                                </div>
-                                <div class="col-12 my-2">
-                                    <hr>
-                                </div>
+
+                <div class="col d-flex mt-4 justify-content-end">
+                    <div class="text-center">
+                        <img src="./assets/images/coins-small.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 shadow-lg info ">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-6">
+                                <span class="fs-4">Entradas <i class="bi bi-arrow-down-circle fs-2 align-middle"></i>
+                                </span>
                             </div>
+                            <div class="col-6">
+                                <span class="fs-4">Saídas <i class="bi bi-arrow-up-circle fs-2"></i> </span>
+                            </div>
+                            <div class="col-12 my-2">
+                                <hr>
+                            </div>
+                        </div>
 
 
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col">
-                                                R$ 1200,00
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col">
-                                                R$ 500,00
-                                            </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            R$ 1200,00
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-12">
-                                <button  type="button " class="btn button-default mt-2 ">Ver Todas</button>
+                            <div class="col-6">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            R$ 500,00
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-
                         </div>
+
+                        <div class="col-12">
+                            <button type="button " class="btn button-default mt-2 ">Ver Todas</button>
+                        </div>
+
                     </div>
                 </div>
+            </div>
 
-
-
+            <button class="btn ">
+                <i class="bi bi-plus button-float" data-bs-toggle="modal" data-bs-target="#transactions-modal"></i>
+            </button>
         </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="transactions-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Adicinar Lançamentos</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form id="transactions-form">
+                        <div class="modal-body">
+
+                            <div class="mb-3">
+                                <label for="value-input" class="form-label">Valor</label>
+                                <input type="number" class="form-control" id="value-input" aria-describedby="emailHelp">
+
+                            </div>
+                            <div class="mb-3">
+                                <label for="description-input" class="form-label">Descrição</label>
+                                <input type="text" class="form-control" id="description-input">
+
+                            </div>
+                            <div class="mb-3">
+                                <label for="data-input" class="form-label">Data</label>
+                                <input type="date" class="form-control" id="data-input">
+
+                            </div>
+
+                            <div class="mb-3">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="type-input" id="inlineRadio1" value="1" checked>
+                                    <label class="form-check-label" for="inlineRadio1">Entrada</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="type-input" id="inlineRadio2" value="2">
+                                    <label class="form-check-label" for="inlineRadio2">Saída</label>
+                                  </div>
+                                 
+
+                            </div>
+
+
+
+                        </div>
+                        <div class="modal-footer">
+                            <button style="border-radius: 10px;" type="button" class="btn btn-secondary"
+                                data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn button-default">Adicionar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
