--- a/public/transactions.html
+++ b/public/transactions.html
@@ -105,9 +105,64 @@
                 </div>
             </div>
 
-
+            <button class="btn ">
+                <i class="bi bi-plus button-float" data-bs-toggle="modal" data-bs-target="#transactions-modal"></i>
+            </button>
 
         </div>
+
+         <!-- Modal -->
+         <div class="modal fade" id="transactions-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+         <div class="modal-dialog">
+             <div class="modal-content">
+                 <div class="modal-header">
+                     <h5 class="modal-title" id="exampleModalLabel">Adicinar Lançamentos</h5>
+                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                 </div>
+                 <form id="transactions-form">
+                     <div class="modal-body">
+
+                         <div class="mb-3">
+                             <label for="value-input" class="form-label">Valor</label>
+                             <input type="number" class="form-control" id="value-input" aria-describedby="emailHelp">
+
+                         </div>
+                         <div class="mb-3">
+                             <label for="description-input" class="form-label">Descrição</label>
+                             <input type="text" class="form-control" id="description-input">
+
+                         </div>
+                         <div class="mb-3">
+                             <label for="data-input" class="form-label">Data</label>
+                             <input type="date" class="form-control" id="data-input">
+
+                         </div>
+
+                         <div class="mb-3">
+                             <div class="form-check form-check-inline">
+                                 <input class="form-check-input" type="radio" name="type-input" id="inlineRadio1" value="1" checked>
+                                 <label class="form-check-label" for="inlineRadio1">Entrada</label>
+                               </div>
+                               <div class="form-check form-check-inline">
+                                 <input class="form-check-input" type="radio" name="type-input" id="inlineRadio2" value="2">
+                                 <label class="form-check-label" for="inlineRadio2">Saída</label>
+                               </div>
+                              
+
+                         </div>
+
+
+                     </div>
+                     <div class="modal-footer">
+                         <button style="border-radius: 10px;" type="button" class="btn btn-secondary"
+                             data-bs-dismiss="modal">Cancelar</button>
+                         <button type="submit" class="btn button-default">Adicionar</button>
+                     </div>
+                 </form>
+             </div>
+         </div>
+     </div>
     </main>
 
 
