--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 
                         <div class="row">
                             <div class="col">
-                                <p class="text-center mt-2 form-text " data-bs-toggle="modal"
+                                <p id="link-conta" class="text-center mt-2 form-text " data-bs-toggle="modal"
                                     data-bs-target="#register-modal">Ainda não tem conta?
                                     <span class="link-default"> Criar uma conta.</span>
 
