--- a/public/index.html
+++ b/public/index.html
@@ -116,12 +116,12 @@
                             <div class="mb-3">
                                 <label for="email-create-input" class="form-label">Email</label>
                                 <input type="email" class="form-control" id="email-create-input"
-                                    aria-describedby="emailHelp">
+                                    aria-describedby="emailHelp" required>
                 <div id="emailHelp" class="form-text">Utilize seu e-mail para criar sua conta.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="password-create-input" class="form-label">Senha</label>
-                                <input type="password" class="form-control" id="password-create-input">
+                                <input type="password" class="form-control" id="password-create-input" required>
             <div id="emailHelp" class="form-text">Utilize uma senha fácil de lembrar .</div>
                             </div>
                            
