--- a/public/index.html
+++ b/public/index.html
@@ -46,21 +46,21 @@
 
                         <div class="row">
                             <div class="col">
-                                <form>
+                                <form id="login-form">
                                     <div class="mb-3">
-                                        <label for="exampleInputEmail1" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1"
+                                        <label for="email-input" class="form-label">Email</label>
+                                        <input type="email" class="form-control" id="email-input"
                                             aria-describedby="emailHelp">
                                         <div id="emailHelp" class="form-text">Utilize seu e-mail para realizar seu
                                             login.</div>
                                     </div>
                                     <div class="mb-3">
-                                        <label for="exampleInputPassword1" class="form-label">Senha</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1">
+                                        <label for="password-input" class="form-label">Senha</label>
+                                        <input type="password" class="form-control" id="password-input">
                                     </div>
                                     <div class="mb-3 form-check">
-                                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                        <label class="form-check-label" for="exampleCheck1">Permanecer Logado.</label>
+                                        <input type="checkbox" class="form-check-input" id="session-check">
+                                        <label class="form-check-label" for="session-check">Permanecer Logado.</label>
                                     </div>
                                     <button type="submit" class="btn button-login">Entrar</button>
                                 </form>
