--- a/public/home.html
+++ b/public/home.html
@@ -38,8 +38,8 @@
                                 aria-expanded="false">
                                 <i class="bi bi-person-circle fs-4"></i>
                             </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Sair</a></li>
+                            <ul class="dropdown-menu logout" aria-labelledby="dropdownMenuButton1">
+                                <li><button class="dropdown-item " id="button-logout">Sair</button></li>
 
                             </ul>
                         </div>
@@ -143,8 +143,8 @@
 
                             </div>
                             <div class="mb-3">
-                                <label for="data-input" class="form-label">Data</label>
-                                <input type="date" class="form-control" id="data-input">
+                                <label for="date-input" class="form-label">Data</label>
+                                <input type="date" class="form-control" id="date-input">
 
                             </div>
 
@@ -183,7 +183,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-        <script src="./js/index.js"></script>
+        <script src="./js/home.js"></script>
 </body>
 
 </html>
